# weather-app

./: README.md  docker-compose.prod.yml  docker-compose.yml
next-app/: .env.development  dev.Dockerfile  next.config.ts  package-lock.json  package.json  prod.Dockerfile
next-app/src/apis/: authentication.tsx  comment.tsx  favourite.tsx  forecast.tsx
next-app/src/app/: layout.tsx  page.tsx
next-app/src/app/location/: page.tsx
next-app/src/components/: FavouriteLocations.tsx  Forecast.tsx  Header.tsx  LocationSearch.tsx  TopLocations.tsx
next-app/src/contexts/: account.tsx
next-app/src/hooks/: useAccount.tsx
next-app/src/services/: api.tsx
next-app/src/types/: account.tsx  comments.tsx  index.tsx  location.tsx
python-app/: Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
python-app/alembic/: env.py
python-app/alembic/versions/: 1243bc15382e_add_unique_constraint_of_latitude_and_.py  2991b89c748c_add_users_model.py  2ca5d81b5788_add_location_model.py  4bbb81ae4434_remove_latitude_and_longitude_index.py  6984c3c5135a_add_account_model.py  720eaa03fef0_add_favourite_model.py  e16c2d89cdb7_add_comment_model.py
python-app/src/: db.py  main.py  models.py  schemas.py
python-app/src/routes/: auth.py  authentication.py  comment.py  counter.py  favourite.py  forecast.py  top_location.py
python-app/src/services/: account.py  auth.py  comment.py  counter.py  favourite.py  forecast.py  location.py  top_location.py
