[project]
name = "python-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.2",
    "debugpy>=1.8.14",
    "fastapi>=0.115.14",
    "postgres>=4.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.7",
    "redis>=6.2.0",
    "requests>=2.32.4",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.35.0",
]
